[package]
name = "dehex"
version = "0.1.0"
authors = ["Ulf Ejlertsson <ulf.ejlertsson@gmail.com>"]


[badges]
travis-ci = { repository = "stormogulen/dehex" }

[dependencies]
pretty-hex = "0.1.0"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.0"
piston2d-opengl_graphics = "0.52.0"
rand = "0.4"